tests/float/double_dot.rz
12.34.2 // error: numbers can't have two decimal parts